# react-native-skia-yoga

./: .eslintrc.js  .gitignore  MASTER_PLAN.md  MASTER_PROGRESS.md  README.md  RNSkiaYoga.podspec  WORKER_BRIEF.md  app.json  index.d.ts  jsx-dev-runtime.d.ts  jsx-dev-runtime.js  jsx-runtime.d.ts  jsx-runtime.js  nitro.json  package-lock.json  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  fix-prefab.gradle  gradle.properties
android/src/main/cpp/: SkiaYogaModuleNative.cpp  cpp-adapter.cpp
android/src/main/cpp/jni/include/: JniSkiaYogaView.h
android/src/main/java/com/margelo/nitro/RNSkiaYoga/: RNSkiaYogaPackage.java  SkiaYogaPackage.java
android/src/main/java/com/margelo/nitro/skiayoga/: SkiaYogaModule.kt  SkiaYogaPackage.kt  SkiaYogaView.java  SkiaYogaViewManager.java
cpp/: AnimatedDouble.cpp  ColorParser.cpp  ColorParser.hpp  DrawingCtx.h  JSIConverter+AnimatedDouble.hpp  JSIConverter+NodeCommand.hpp  JSIConverter+SkFont.hpp  JSIConverter+SkImage.hpp  JSIConverter+SkMatrix.hpp  JSIConverter+SkPaint.hpp  JSIConverter+SkParagraph.hpp  JSIConverter+SkParagraphStyle.hpp  JSIConverter+SkPath.hpp  JSIConverter+SkRRect.hpp  JSIConverter+SkRect.hpp  JSIConverter+SkSamplingOptions.hpp  JSIConverter+SkTextStyle.hpp  JSIConverter+StrokeOpts.hpp  JSIConverter+YogaNode.hpp  NodeCommand.hpp  PlatformContextAccessor.cpp  PlatformContextAccessor.hpp  RNSkYogaView.cpp  RNSkYogaView.hpp  SkiaGlue.hpp  SkiaYoga.cpp  SkiaYoga.hpp  YogaNode.cpp  YogaNode.hpp  polyfill.h
example/: app.json  babel.config.js  metro.config.js  package.json  tsconfig.json  tsconfig.skiayoga.json
example/app/: _layout.tsx
example/app/(tabs)/: _layout.tsx  animate.tsx  benchmark.tsx  breath.tsx  index.tsx  interactivity.tsx
example/app/(tabs)/components/: _layout.tsx  blur-mask-filter.tsx  circle.tsx  group.tsx  image.tsx  index.tsx  line.tsx  oval.tsx  paragraph.tsx  path.tsx  points.tsx  rect.tsx  registry.ts  rrect.tsx  text.tsx
example/app/(tabs)/styles/: _layout.tsx  index.tsx  layout-demos.tsx  layout.tsx  paint-demos.tsx  paint.tsx  positioning-demos.tsx  positioning.tsx  registry.ts  spacing-demos.tsx  spacing.tsx  style-demo-builders.tsx  transform-demos.tsx  transform.tsx
example/components/: CommandDemoScreen.tsx  StyleShowcaseScreen.tsx  polyfill.ts
example/components/ui/: IconSymbol.tsx
example/plugins/: with-mac-catalyst.js
example/types/: skiayoga-typecheck.tsx
ios/: Bridge.h  PlatformContextFactory.h  PlatformContextFactoryBridge.mm  SkiaYogaModule.h  SkiaYogaModule.mm  SkiaYogaView.h  SkiaYogaView.mm  SkiaYogaViewManager.h  SkiaYogaViewManager.mm
scripts/: prepare-react-native-skia-catalyst.mjs  style-corner-radius-inventory.mjs  sync-example-links.mjs  verifier-temp-utils.mjs  verify-android-skia-archives.mjs  verify-animated-double-synchronizable.mjs  verify-example-bundle-export.mjs  verify-example-native-generation.mjs  verify-feasible-matrix.mjs  verify-gesture-interaction-runtime.mjs  verify-install-isolation.mjs  verify-package-codegen-autolinking.mjs  verify-package-lifecycle.mjs  verify-package-surface.mjs  verify-package-typescript-consumer.mjs  verify-reconciler-animated-bindings.mjs  verify-rn-codegen-schema.mjs  verify-rn-skia-imports.mjs  verify-rnsk-yoga-view-runtime.mjs  verify-skia-yoga-object-lazy-init.mjs  verify-yogacanvas-lifecycle-runtime.mjs  verify-yoganode-jsi-raw-methods.mjs  verify-yoganode-native-commands-render.mjs  verify-yoganode-native-hit-testing.mjs  verify-yoganode-native-lifetime.mjs  verify-yoganode-native-runtime-smoke.mjs  verify-yoganode-nitro-materialization.mjs
src/: Reconciler.ts  SkiaYogaObject.ts  YogaCanvas.tsx  index.ts  interactivity.ts  internalTypes.ts  jsx-dev-runtime.ts  jsx-runtime-types.ts  jsx-runtime.ts  jsx.ts  nativeId.ts  useCanvasGestures.ts  util.ts
src/specs/: NativeSkiaYoga.ts  SkiaYoga.nitro.ts  SkiaYogaViewNativeComponent.ts  commands.ts  style.ts
worker-progress/: worker-001-js-api-audit.md  worker-002-native-architecture-audit.md  worker-003-verification-baseline.md  worker-004-install-isolation.md  worker-005-package-entrypoints.md  worker-006-platform-context.md  worker-007-typecheck-yogacanvas.md  worker-008-reset-semantics.md  worker-009-origin-animated-contract.md  worker-010-yoganode-parent-lifetime-audit.md  worker-011-yoganode-parent-lifetime.md  worker-012-native-lifetime-regression.md  worker-013-native-runtime-smoke.md  worker-014-platform-runtime-readiness.md  worker-015-example-workspace-readiness.md  worker-016-platform-native-verification.md  worker-017-package-plugin-hygiene.md  worker-018-next-backlog-audit.md  worker-019-package-lifecycle-hygiene.md  worker-020-next-root-cause-audit.md  worker-021-runtime-smoke-archive-discovery.md  worker-022-next-root-cause-audit.md  worker-023-android-skia-archive-discovery.md  worker-024-next-root-cause-audit.md  worker-025-lint-ci-root-config.md  worker-026-next-root-cause-audit.md  worker-027-react-native-deep-imports.md  worker-028-next-root-cause-audit.md  worker-029-example-lint-contract.md  worker-030-next-root-cause-audit.md  worker-031-readme-api-contract.md  worker-032-next-root-cause-audit.md  worker-033-native-publish-surface.md  worker-034-next-root-cause-audit-tmux-challenger.md  worker-034-next-root-cause-audit.md  worker-035-example-bundle-smoke-tmux-challenger.md  worker-035-example-bundle-smoke.md  worker-036-post-035-root-cause-audit.md  worker-037-yogacanvas-skia-import-cleanup.md  worker-038-post-037-root-cause-audit.md  (+207 more)
